tests/e2e/service_call_as_output4.error
Error: syntax error in story at line 1, column 19

1|    a = uuid generate as t
                        ^

E0007: Missing value after `=`
